Fix z-index bug and make overlay for film images

--- a/src/components/imageslider/imageslider.scss
+++ b/src/components/imageslider/imageslider.scss
@@ -17,6 +17,18 @@
   overflow: hidden;
 }
 
+.slider::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
 .slider-image {
   display: flex;
   justify-content: center;
@@ -84,6 +96,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  z-index: 2;
 }
 
 .dot {
@@ -112,6 +125,7 @@
   right: 0;
   text-align: center;
   color: #fff;
+  z-index: 2;
 }
 
 
